--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "mic-inspector",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "keywords": [
-    "inspector"
+    "inspector",
+    "react",
+    "object-inspector",
+    "dom-inspector",
+    "devtools"
   ],
   "main": "build/lib/index.js",
   "module": "build/es/index.js",
