--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mic-inspector",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "keywords": [
     "inspector",
@@ -19,8 +19,8 @@
   "scripts": {
     "build": "npm run dist",
     "dist": "webpack --mode=production -p",
-    "es": "tsc --module esnext --outDir build/es --target esnext",
-    "lib": "tsc --module commonjs --outDir build/lib --target es5",
+    "es": "tsc --module ES6 --outDir build/es --target ES6",
+    "lib": "tsc --module commonjs --outDir build/lib --target ES5",
     "lint-all": "eslint src/* --ext .tsx,.ts",
     "prebuild": "npm run es",
     "prees": "npm run lib",
@@ -38,7 +38,13 @@
     "url": "https://github.com/china-liji/mic-inspector/issues"
   },
   "homepage": "https://github.com/china-liji/mic-inspector#readme",
-  "dependencies": {},
+  "dependencies": {
+    "mic-global": "^1.1.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-inspector": "^5.0.1",
+    "react-jss": "^10.1.1"
+  },
   "devDependencies": {
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.8",
@@ -51,11 +57,6 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
-    "mic-global": "^1.1.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-inspector": "^5.0.1",
-    "react-jss": "^10.1.1",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.9.3",
